@@ -11,6 +11,8 @@
 -- fixed -K handling
 -- fixed laulert when rule has no msg
 -- made some packet data available to alert_luajit
+-- fixed flow init when not bound
+-- tweaked stats output - no section if all counts zero
 
 122
 -- pulled thread pinning from Josh
